<resources>
    <string name="app_name">Idalia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Idalia</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_questionnaire">Questionnaire</string>
    <string name="menu_smalltalk">Smalltalk Improvement</string>
    <string name="menu_dating">Dating 101</string>
    <string name="menu_behind">Behind Idalia</string>
    <string name="menu_about">About</string>
    <string name="Continue_button">Continue</string>
    <string name="Back_button">Back</string>
    <string name="Other">Other</string>
    <string name="Save_file">Save</string>
    <string name="Contact">Contact me</string>
</resources>
